# holosuite

./: .gitignore  CMakeLists.txt
shaders/: HoloRenderDSCP2FringeFragmentShader.cg
src/: CMakeLists.txt
src/common/: CommonDefs.hpp
src/holocapture/: HoloCaptureAudioPortaudio.cpp  HoloCaptureAudioPortaudio.hpp  HoloCaptureGenerator.hpp  HoloCaptureInfo.hpp  HoloCaptureOpenNI2.cpp  HoloCaptureOpenNI2.hpp  HoloCaptureOpenNI2Listener.hpp  IHoloCapture.hpp  IHoloCaptureAudio.hpp
src/holocodec/: HoloCodecGenerator.hpp  HoloCodecH264.cpp  HoloCodecH264.hpp  HoloCodecOctree.cpp  HoloCodecOctree.hpp  HoloCodecOpus.cpp  HoloCodecOpus.hpp  HoloCodecPassthroughCloud.cpp  HoloCodecPassthroughCloud.hpp  IHoloCodec.hpp
src/holofilter/: IHoloFilter.hpp
src/holonet/: HoloNet.hpp  HoloNetClient.cpp  HoloNetClient.hpp  HoloNetServer.cpp  HoloNetServer.hpp  HoloNetSession.cpp  HoloNetSession.hpp
src/holorender/: HoloRenderAudioPortaudio.cpp  HoloRenderAudioPortaudio.hpp  HoloRenderDSCP2.cpp  HoloRenderDSCP2.hpp  HoloRenderGenerator.hpp  HoloRenderVisualizer.cpp  HoloRenderVisualizer.hpp  IHoloRender.hpp  IHoloRenderAudio.hpp
src/holorender/shaders/: HoloRenderDSCP2CloudFragmentShader.cg  HoloRenderDSCP2CloudVertexShader.cg
src/holosuite/: CMakeLists.txt  HoloSession.cpp  HoloSession.hpp  main.cpp
src/holosuite-lib/: CMakeLists.txt
src/holosuite-lib-unity/: CMakeLists.txt  HoloUnity.cpp  HoloUnity.h
src/holosuite-lib-unity-cs/: Application.cs  HoloCommon.cs  HoloSuiteInternal.cs  holosuite-lib-unity-cs.csproj
src/holosuite-lib-unity-cs/Properties/: AssemblyInfo.cs
src/holosuite-lib-unity-test/: CMakeLists.txt  main.cpp
src/holosuite-lib/holocapture/: HoloCaptureAudioPortaudio.cpp  HoloCaptureAudioPortaudio.hpp  HoloCaptureGenerator.hpp  HoloCaptureInfo.hpp  HoloCaptureOpenNI2.cpp  HoloCaptureOpenNI2.hpp  HoloCaptureOpenNI2Listener.cpp  HoloCaptureOpenNI2Listener.hpp  IHoloCapture.hpp  IHoloCaptureAudio.hpp
src/holosuite-lib/holocodec/: HoloCodecGenerator.hpp  HoloCodecH264.cpp  HoloCodecH264.hpp  HoloCodecOctree.cpp  HoloCodecOpus.hpp  HoloCodecPassthroughCloud.cpp  HoloCodecPassthroughCloud.hpp  IHoloCodec.hpp
src/holosuite-lib/holocommon/: CommonDefs.hpp
src/holosuite-lib/holofilter/: IHoloFilter.hpp
src/holosuite-lib/holoinput/: HoloInputDeviceGenerator.hpp  HoloInputDeviceLeapSDK.cpp  HoloInputDeviceLeapSDK.hpp  IHoloInputDevice.hpp
src/holosuite-lib/holonet/: HoloNet.hpp  HoloNetClient.cpp  HoloNetClient.hpp  HoloNetServer.cpp  HoloNetServer.hpp  HoloNetSession.cpp  HoloNetSession.hpp
src/holosuite-lib/holorender/: HoloRender3DObject.cpp  HoloRender3DObject.hpp  HoloRenderDSCP2.cpp  HoloRenderDSCP2.hpp  HoloRenderDSCP4.cpp  HoloRenderDSCP4.hpp  HoloRenderGenerator.hpp  HoloRenderObjectTracker.cpp  HoloRenderObjectTracker.hpp  HoloRenderOpenGL.cpp  HoloRenderOpenGL.hpp  HoloRenderVisualizer.cpp  HoloRenderVisualizer.hpp  IHoloRender.hpp  IHoloRenderAudio.hpp
src/holosuite-lib/holosession/: HoloSession.cpp  HoloSession.hpp
src/holosuite-lib/holoshaders/: HoloRenderDSCP2CloudVertexShader.cg  HoloRenderDSCP2FringeVertexShader.cg
src/holosuite-lib/holoutils/: HoloUtils.cpp  HoloUtils.hpp
src/holoutils/: HoloUtils.cpp  HoloUtils.hpp
src/libdscp4/: DSCP4Render.cpp  dscp4_defs.h
test/: CMakeLists.txt
tools/share/cmake/: FindDSCP4.cmake  FindFFMPEG.cmake  FindLeapSDK.cmake  FindLog4Cxx.cmake  FindOpus.cmake  FindPortaudio.cmake  FindUDT.cmake  FindUnitTestPlusPlus.cmake  FindZSpace.cmake
